Closed Bug 1326423 Opened 7 years ago Closed 7 years ago

"netwerk/ipc/NeckoParent.cpp:492:22: error: unused variable 'p' [-Werror=unused-variable]" bustage when Gecko 52 merges to Beta

Categories

(Core :: Networking, defect)

50 Branch
defect
Not set
blocker

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox51 --- unaffected
firefox52 + fixed
firefox53 + fixed

People

(Reporter: RyanVM, Assigned: baku)

Details

(Whiteboard: [necko-active])

Attachments

(1 file)

[Tracking Requested - why for this release]: Merge day bustage.

This is across the board bustage that's due to hit in less than a month on the next merge day. Looks like bug 1307331 touched this line during the 52 cycle, so starting there.

https://treeherder.mozilla.org/logviewer.html#?job_id=65498919&repo=try

The patch below is what was used to simulate the uplift if you need to test locally or on Try:
https://hg.mozilla.org/try/raw-rev/f13395b7904b742e4a227f9f0e0130b4c215b552
Flags: needinfo?(wpan)
Tracking 52/53+ to address this bustage before the next merge.
Assignee: nobody → valentin.gosu
Whiteboard: [necko-active]
talked to baku and he will take a look at this
Assignee: valentin.gosu → amarchesini
MOZ_ASSERT should be enough in this case.
Flags: needinfo?(wpan)
Comment on attachment 8823578 [details]
Bug 1326423 - Fix assertion for optimized build.

https://reviewboard.mozilla.org/r/102118/#review102514
Attachment #8823578 - Flags: review?(amarchesini) → review+
Pushed by ryanvm@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/558eca1b4460
Fix assertion for optimized build. r=baku
https://hg.mozilla.org/mozilla-central/rev/558eca1b4460
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
we still need to uplift this to aurora since we see this in uplift simulations for aurora as beta
Flags: needinfo?(amarchesini)
Comment on attachment 8823578 [details]
Bug 1326423 - Fix assertion for optimized build.

Approval Request Comment
[Feature/Bug causing the regression]: Introduction of MOZ_DIAGNOSTIC_ASSERT
[User impact if declined]: beta does't compile
[Is this code covered by automated tests?]: it's not needed
[List of other uplifts needed for the feature/fix]: 0
[Is the change risky?]: no
[Why is the change risky/not risky?]: it's just a debug variable.
[String changes made/needed]: none
Flags: needinfo?(amarchesini)
Attachment #8823578 - Flags: approval-mozilla-beta?
Attachment #8823578 - Flags: approval-mozilla-beta? → approval-mozilla-aurora?
Comment on attachment 8823578 [details]
Bug 1326423 - Fix assertion for optimized build.

avoid bustage on next merge day, aurora52+
Attachment #8823578 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: