Bug 1326423 - Fix assertion for optimized build. r=baku

MozReview-Commit-ID: By3J4RLnJHn